--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
-    <link rel="icon" href="src/assets/logo.png">
+    <link rel="icon" href="src/assets/bodymoml.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BodyMom</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.css" rel="stylesheet" />
